# taskshop-simple

./: .env.example  .gitignore  README.md  ci.yml
.github/workflows/: ci.yml
taskshop-simple/: LICENSE  README.md  format_and_check.py  generate_docs.py  install_hooks.py  pyproject.toml  requirements.txt  todo_en_uno.py
taskshop-simple/docs/pdoc/: index.html  search.js  taskshop.html
taskshop-simple/docs/pdoc/taskshop/: cli_app.html  models.html  simple_gui.html
taskshop-simple/src/taskshop/: __init__.py  __main__.py  cli_app.py  models.py  simple_gui.py
taskshop-simple/taskshop-simple/: README.md
taskshop-simple/tests/: test_basic.py
