[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taskshop-simple"
version = "1.0.0"
description = "Tienda simple de productos digitales"
authors = [{name = "Grupo TaskShop"}]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "F",   # PyFlakes
    "I",   # Isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # Ignorar línea demasiado larga

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignorar imports no usados en __init__.py

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false  # Cambiar a false para ser más permisivo